welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: value Length is not a member of Array[java.awt.Color]
	for(w<-0 to T.Length-1) {
                      ^